feat: implement regions page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,3 +20,7 @@
 .gm-style-iw > button {
   display: none !important;
 }
+
+.simplebar-track.simplebar-vertical .simplebar-scrollbar:before {
+    background-color: white;
+}
